--- a/scribbles/least-fp.html
+++ b/scribbles/least-fp.html
@@ -6,7 +6,7 @@
 <script>hljs.highlightAll();</script></head>
 <body><article><h1>Why Least Fixpoints</h1>
 <h3>April, 2021</h3>
-<section><p><span class="newthought">Why does denotational semantics</span> care about <i>least</i> fixpoints, as opposed to say greatest or some other fixpoints.
+<section><p><span class="newthought">Why does denotational semantics</span> care about <i>least</i> fixpoints, as opposed to say greatest or some other fixpoints?
 Answer: because it's least fixpoints that capture our operational intuitions of code. Read on for an example.
 <label for="acks" class="margin-toggle">&amp;#8853;</label>
 <input type="checkbox" id="acks" class="margin-toggle" />
