--- a/index.html
+++ b/index.html
@@ -1,54 +1,89 @@
 <!DOCTYPE html>
 
 
-<html lang="en"><head><link rel="stylesheet" href="tufte.css" />
+<html lang="en"><head><meta charset="utf-8" />
+<link rel="stylesheet" href="tufte.css" />
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script></head>
 <body><article><h1>Abel Nieto</h1>
 <section><p>Hello! My name is Abel, and I’m a PhD student at Aarhus University, where
-I'm a member of the <a href="https://cs.au.dk/research/logic-and-semantics/">Logic and Semantics</a> group,
-as well as the <a href="https://cs.au.dk/research/centers/cpv/">Center for Basic Research in Program Verification</a>.
+I'm a member of the <a href="https://cs.au.dk/research/logic-and-semantics/">Logic and Semantics</a> group.
 My advisor is <a href="https://cs.au.dk/~birke/">Lars Birkedal</a>.</p>
  <p>I work on <a href="https://iris-project.org/">formal verification</a> of distributed systems. I'm also interested in programming language design, type theory,
 program analysis, and compilers.</p></section>
-<section><h2>Publications</h2>
-<h3>peer-reviewed</h3>
-<ol><li><b>Distributed Causal Memory: Modular Specification and Verification in Higher-Order Distributed Separation Logic</b> <span>|<a href="papers/ccdb-final.pdf">.pdf</a></span>
+<section><h3>Publications</h3>
+<span style="color:gray">[<span><a href="https://scholar.google.ca/citations?hl=en&amp;user=Z9nsk2AAAAAJ">Google Scholar</a>, <a href="https://dblp.org/pid/205/2896.html">DBLP</a></span>]</span>
+<h4>peer-reviewed</h4>
+<table><colgroup><col span="1" style="width: 15%;" />
+<col span="1" style="width: 85%;" /></colgroup>
+<span><tr> <td><small><span style="color:gray">POPL '21</span></small></td>
+<td><b>Distributed Causal Memory: Modular Specification and Verification in Higher-Order Distributed Separation Logic</b>
 <br />
 Léon Gondelman, Simon Oddershede Gregersen, <em>Abel Nieto</em>, Amin Timany, Lars Birkedal
 <br />
-<small><span style="color:gray">POPL 2021</span></small></li>
-<li><b>Blame for Null</b> <span>|<a href="papers/blame-final.pdf">.pdf</a>, <a href="https://github.com/abeln/null-calculus">code</a></span>
+<span><a href="papers/ccdb-final.pdf">pdf</a></span></td></tr>
+<tr><td><br /></td> <td><br /></td></tr></span>
+<span><tr> <td><small><span style="color:gray">ECOOP '20</span></small></td>
+<td><b>Blame for Null</b>
 <br />
 <em>Abel Nieto</em>, Marianna Rapoport, Gregor Richards, Ondřej Lhoták
 <br />
-<small><span style="color:gray">ECOOP 2020</span></small></li>
-<li><b>Scala with Explicit Nulls</b> <span>|<a href="papers/explicit-nulls-final.pdf">.pdf</a>, <a href="https://github.com/abeln/dotty/tree/dotty-explicit-nulls-evaluation">code</a></span>
+<span><a href="papers/blame-final.pdf">pdf</a>, <a href="https://github.com/abeln/null-calculus">code</a></span></td></tr>
+<tr><td><br /></td> <td><br /></td></tr></span>
+<span><tr> <td><small><span style="color:gray">ECOOP '20</span></small></td>
+<td><b>Scala with Explicit Nulls</b>
 <br />
 <em>Abel Nieto</em>, Yaoyu Zhao, Ondřej Lhoták, Angela Chang, Justin Pu
 <br />
-<small><span style="color:gray">ECOOP 2020</span></small></li>
-<li><b>Towards Algorithmic Typing for DOT (Short Paper)</b> <span>|<a href="papers/algo-dot.pdf">.pdf</a>, <a href="https://www.youtube.com/watch?v=uokvc1Do_nM">talk</a></span>
+<span><a href="papers/explicit-nulls-final.pdf">pdf</a>, <a href="https://github.com/abeln/dotty/tree/dotty-explicit-nulls-evaluation">code</a></span></td></tr>
+<tr><td><br /></td> <td><br /></td></tr></span>
+<span><tr> <td><small><span style="color:gray">SCALA '17</span></small></td>
+<td><b>Towards Algorithmic Typing for DOT (Short Paper)</b>
 <br />
 <em>Abel Nieto</em>
 <br />
-<small><span style="color:gray">Scala 2017</span></small></li></ol>
-<h3>technical reports</h3>
-<ol><li><b>Tamarin: Concolic Disequivalence for MIPS</b> <span>|<a href="https://arxiv.org/pdf/1801.02571.pdf">.pdf</a></span>
+<span><a href="papers/algo-dot.pdf">pdf</a>, <a href="https://www.youtube.com/watch?v=uokvc1Do_nM">talk</a></span></td></tr>
+<tr><td><br /></td> <td><br /></td></tr></span></table>
+<h4>technical reports</h4>
+<table><colgroup><col span="1" style="width: 15%;" />
+<col span="1" style="width: 85%;" /></colgroup>
+<span><tr><td><small><span style="color:gray">2021</span></small></td>
+<td><b>Trillium: Unifying Refinement and Higher-Order Distributed Separation Logic</b>
+<br />
+Amin Timany, Simon Oddershede Gregersen, Léo Stefanesco, Léon Gondelman, <em>Abel Nieto</em>, Lars Birkedal
+<br />
+<span><a href="https://arxiv.org/abs/2109.07863">pdf</a></span></td></tr>
+<tr><td><br /></td> <td><br /></td></tr></span>
+<span><tr><td><small><span style="color:gray">2018</span></small></td>
+<td><b>Tamarin: Concolic Disequivalence for MIPS</b>
 <br />
 <em>Abel Nieto</em>
 <br />
-<small><span style="color:gray">2018</span></small></li>
-<li><b>Towards Algorithmic Typing for DOT</b> <span>|<a href="https://arxiv.org/abs/1708.05437">.pdf</a></span>
+<span><a href="https://arxiv.org/pdf/1801.02571.pdf">pdf</a></span></td></tr>
+<tr><td><br /></td> <td><br /></td></tr></span>
+<span><tr><td><small><span style="color:gray">2017</span></small></td>
+<td><b>Towards Algorithmic Typing for DOT</b>
 <br />
 <em>Abel Nieto</em>
 <br />
-<small><span style="color:gray">2017</span></small></li></ol>
-<h3>thesis</h3>
-<ol><li><b>Scala with Explicit Nulls</b> <span>|<a href="https://uwspace.uwaterloo.ca/handle/10012/15364">.pdf</a></span>
+<span><a href="https://arxiv.org/abs/1708.05437">pdf</a></span></td></tr>
+<tr><td><br /></td> <td><br /></td></tr></span></table>
+<h4>theses</h4>
+<table><colgroup><col span="1" style="width: 15%;" />
+<col span="1" style="width: 85%;" /></colgroup>
+<span><tr><td><small><span style="color:gray">2019</span></small></td>
+<td><b>Scala with Explicit Nulls</b>
 <br />
-<small><span style="color:gray">master thesis, University of Waterloo, 2019</span></small></li></ol></section>
-<section><h2>Memos</h2>
-<ul><li><a href="scribbles/free-theorem.html">A Free Theorem</a> <small><span style="color:gray">(08/20)</span></small></li>
-<li><a href="scribbles/quantifiers.html">Simulations and Commuting Quantifiers</a> <small><span style="color:gray">(03/21)</span></small></li>
-<li><a href="scribbles/least-fp.html">Why Least Fixpoints</a> <small><span style="color:gray">(04/21)</span></small></li></ul></section></article></body></html>
+<small><span style="color:gray">Master thesis, University of Waterloo</span></small>
+<br />
+<span><a href="https://uwspace.uwaterloo.ca/handle/10012/15364">pdf</a></span></td></tr>
+<tr><td><br /></td> <td><br /></td></tr></span></table>
+<h4>memos</h4>
+<table><colgroup><col span="1" style="width: 15%;" />
+<col span="1" style="width: 85%;" /></colgroup>
+<tr><td><small><span style="color:gray">04/21</span></small></td>
+<td><a href="scribbles/least-fp.html">Why Least Fixpoints</a> </td></tr>
+<tr><td><small><span style="color:gray">03/21</span></small></td>
+<td><a href="scribbles/quantifiers.html">Simulations and Commuting Quantifiers</a> </td></tr>
+<tr><td><small><span style="color:gray">08/20</span></small></td>
+<td><a href="scribbles/free-theorem.html">A Free Theorem</a> </td></tr></table></section></article></body></html>
