--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script></head>
 <body><article><h1>Abel Nieto</h1>
+<span style="color:gray">[<span><a href="papers/cv.pdf">cv</a>, <a href="mailto:abeln@cs.au.dk">email</a>, <a href="https://github.com/abeln">github</a>, <a href="https://www.linkedin.com/in/abel-nieto-056768242/">linkedin</a></span>]</span>
 <section><p>Hello! My name is Abel, and I’m a PhD student at Aarhus University, where
 I'm a member of the <a href="https://cs.au.dk/research/logic-and-semantics/">Logic and Semantics</a> group.
 My advisor is <a href="https://cs.au.dk/~birke/">Lars Birkedal</a>.</p>
  <p>I work on <a href="https://iris-project.org/">formal verification</a> of distributed systems. I'm also interested in programming language design, type theory,
-program analysis, and compilers.</p></section>
+program analysis, and compilers.</p>
+ <p style="color:red">I expect to complete my PhD by July 2023. I am interested in an applied scientist or formal methods engineer position in industry, in the fields of formal verification, programming language design, compilers, type systems, and static analysis.
+I am affiliated with Aarhus University, but live in Waterloo, Canada. Do get in touch if you know of any opportunities in these areas!</p></section>
 <section><h3>Publications</h3>
-<span style="color:gray">[<span><a href="https://scholar.google.ca/citations?hl=en&amp;user=Z9nsk2AAAAAJ">Google Scholar</a>, <a href="https://dblp.org/pid/205/2896.html">DBLP</a></span>]</span>
+<span style="color:gray">[<span><a href="https://scholar.google.ca/citations?hl=en&amp;user=Z9nsk2AAAAAJ">google scholar</a>, <a href="https://dblp.org/pid/205/2896.html">dblp</a></span>]</span>
 <h4>peer-reviewed</h4>
 <table><colgroup><col span="1" style="width: 15%;" />
 <col span="1" style="width: 85%;" /></colgroup>
