--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script></head>
 <body><article><h1>Abel Nieto</h1>
-<span style="color:gray">[<span><a href="papers/cv.pdf">cv</a>, <a href="mailto:abeln@cs.au.dk">email</a>, <a href="https://github.com/abeln">github</a>, <a href="https://www.linkedin.com/in/abel-nieto-056768242/">linkedin</a></span>]</span>
+<span style="color:gray"><span><a href="papers/cv.pdf">cv</a>, <a href="mailto:abeln@cs.au.dk">email</a>, <a href="https://github.com/abeln">github</a>, <a href="https://www.linkedin.com/in/abel-nieto-056768242/">linkedin</a></span></span>
 <section><p>Hello! My name is Abel, and I’m a PhD student at Aarhus University, where
 I'm a member of the <a href="https://cs.au.dk/research/logic-and-semantics/">Logic and Semantics</a> group.
 My advisor is <a href="https://cs.au.dk/~birke/">Lars Birkedal</a>.</p>
@@ -15,10 +15,17 @@ program analysis, and compilers.</p>
  <p style="color:red">I expect to complete my PhD by July 2023. I am interested in an applied scientist or formal methods engineer position in industry, in the fields of formal verification, programming language design, compilers, type systems, and static analysis.
 I am affiliated with Aarhus University, but live in Waterloo, Canada. Do get in touch if you know of any opportunities in these areas!</p></section>
 <section><h3>Publications</h3>
-<span style="color:gray">[<span><a href="https://scholar.google.ca/citations?hl=en&amp;user=Z9nsk2AAAAAJ">google scholar</a>, <a href="https://dblp.org/pid/205/2896.html">dblp</a></span>]</span>
+<span style="color:gray"><span><a href="https://scholar.google.ca/citations?hl=en&amp;user=Z9nsk2AAAAAJ">google scholar</a>, <a href="https://dblp.org/pid/205/2896.html">dblp</a></span></span>
 <h4>peer-reviewed</h4>
 <table><colgroup><col span="1" style="width: 15%;" />
 <col span="1" style="width: 85%;" /></colgroup>
+<span><tr> <td><small><span style="color:gray">OOPSLA '22 (conditional)</span></small></td>
+<td><b>Modular Verification of Op-Based CRDTs in Separation Logic</b>
+<br />
+<em>Abel Nieto</em>, Léon Gondelman, Alban Reynaud, Amin Timany, Lars Birkedal
+<br />
+<span><a href="https://iris-project.org/pdfs/2022-crdts-submission.pdf">preprint</a></span></td></tr>
+<tr><td><br /></td> <td><br /></td></tr></span>
 <span><tr> <td><small><span style="color:gray">POPL '21</span></small></td>
 <td><b>Distributed Causal Memory: Modular Specification and Verification in Higher-Order Distributed Separation Logic</b>
 <br />
@@ -47,7 +54,7 @@ Léon Gondelman, Simon Oddershede Gregersen, <em>Abel Nieto</em>, Amin Timany, L
 <br />
 <span><a href="papers/algo-dot.pdf">pdf</a>, <a href="https://www.youtube.com/watch?v=uokvc1Do_nM">talk</a></span></td></tr>
 <tr><td><br /></td> <td><br /></td></tr></span></table>
-<h4>technical reports</h4>
+<h4>preprints</h4>
 <table><colgroup><col span="1" style="width: 15%;" />
 <col span="1" style="width: 85%;" /></colgroup>
 <span><tr><td><small><span style="color:gray">2021</span></small></td>
