update crdt paper link

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@ I am affiliated with Aarhus University, but live in Waterloo, Canada. Do get in 
 <h4>peer-reviewed</h4>
 <table><colgroup><col span="1" style="width: 15%;" />
 <col span="1" style="width: 85%;" /></colgroup>
-<span><tr> <td><small><span style="color:gray">OOPSLA '22 (conditional)</span></small></td>
+<span><tr> <td><small><span style="color:gray">OOPSLA '22</span></small></td>
 <td><b>Modular Verification of Op-Based CRDTs in Separation Logic</b>
 <br />
 <em>Abel Nieto</em>, Léon Gondelman, Alban Reynaud, Amin Timany, Lars Birkedal
 <br />
-<span><a href="https://iris-project.org/pdfs/2022-crdts-submission.pdf">preprint</a></span></td></tr>
+<span><a href="https://iris-project.org/pdfs/2022-oopsla-crdts.pdf">preprint</a></span></td></tr>
 <tr><td><br /></td> <td><br /></td></tr></span>
 <span><tr> <td><small><span style="color:gray">POPL '21</span></small></td>
 <td><b>Distributed Causal Memory: Modular Specification and Verification in Higher-Order Distributed Separation Logic</b>
