add ecoop paper

--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
 I'm a member of the <a href="https://cs.au.dk/research/logic-and-semantics/">Logic and Semantics</a> group.
 My advisor is <a href="https://cs.au.dk/~birke/">Lars Birkedal</a>.</p>
  <p>I work on <a href="https://iris-project.org/">formal verification</a> of distributed systems. I'm also interested in programming language design, type theory,
-program analysis, and compilers.</p>
- <p style="color:red">I expect to complete my PhD by July 2023. I am interested in an applied scientist or formal methods engineer position in industry, in the fields of formal verification, programming language design, compilers, type systems, and static analysis.
-I am affiliated with Aarhus University, but live in Waterloo, Canada. Do get in touch if you know of any opportunities in these areas!</p></section>
+program analysis, and compilers.</p></section>
 <section><h3>Publications</h3>
 <span style="color:gray"><span><a href="https://scholar.google.ca/citations?hl=en&amp;user=Z9nsk2AAAAAJ">google scholar</a>, <a href="https://dblp.org/pid/205/2896.html">dblp</a></span></span>
 <h4>peer-reviewed</h4>
 <table><colgroup><col span="1" style="width: 15%;" />
 <col span="1" style="width: 85%;" /></colgroup>
+<span><tr> <td><small><span style="color:gray">ECOOP '23</span></small></td>
+<td><b>Modular Verification of State-Based CRDTs in Separation Logic</b>
+<br />
+<em>Abel Nieto</em>, Arnaud Daby-Seesaram, Léon Gondelman, Amin Timany, Lars Birkedal
+<br />
+<span><a href="https://iris-project.org/pdfs/2023-ecoop-crdts.pdf">preprint</a></span></td></tr>
+<tr><td><br /></td> <td><br /></td></tr></span>
 <span><tr> <td><small><span style="color:gray">OOPSLA '22</span></small></td>
 <td><b>Modular Verification of Op-Based CRDTs in Separation Logic</b>
 <br />
